--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,8 @@
 <section class="cart-show">
-
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+ <% if enhanced_cart.present? %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +47,8 @@
       <% end %>
     </div>
   </div>
-
+  <% else %>
+    <h2 class="alert alert-danger">Your cart is empty.</h2>
+    <a href="/" class="btn-lg btn-primary">Back to Home</a>
+  <% end %>
 </section>
