--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin::Dashboard</h1>
+
+<table class="table table-bordered">
+    <tr>
+      <td>Number of <%= link_to 'products', [:admin, :products] %> available in this store</td>
+      <td><%= @product_count%></td>
+      <td>Number of category avaiable in this store</td>
+      <td><%= @category_count%></td>
+    </tr>
+</table>
+
